@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-27T08:13:19Z",
-  "count_outdated" : 210,
-  "uniques_outdated" : 181,
-  "count" : 216,
-  "uniques" : 187,
+  "timestamp" : "2023-10-30T08:13:55Z",
+  "count_outdated" : 211,
+  "uniques_outdated" : 182,
+  "count" : 217,
+  "uniques" : 188,
   "clones" : [
-    {
-      "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-20T00:00:00Z",
       "count": 2,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
