@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-20T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
