@@ -1,3 +1,12 @@
+2023-10-30T08:13:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6690010077 # 1297
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 181 210 / 187 216
+* notice: next accum: outdated-unq outdated-all / unq all: 182 211 / 188 217
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-10-16] / [2023-10-30]
+
 2023-10-27T08:13:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6664635052 # 1288
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
